--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agony Warlock Calculator</title>
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png">
     <noscript>
         <strong>We're sorry but Agony Warlock Calculator doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <script src="/scripts.js"></script>
-    <link rel="stylesheet" href="/style.css">
+    <script src="scripts.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="calculator">
